# OpenAi-SDK_Online

./: readme.md
00/project/: gemini.py  open.py
01/project/: pyproject.toml
01/project/src/project/: __init__.py  gemini.py  open.py
02/: Chainlit.py  Chatbot.py  streamlit.py
03/: gemini.py
04/: README.md  app.py  gemini.py
