[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "shaheer9023", email = "shaheerahmad9023@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai-agents>=0.0.9",
]

[project.scripts]
project = "project:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
